@@ -1,0 +1,20 @@
+===================================
+    Test of filter design routines
+===================================
+Stabilisation of real filters
+Polynomial, p = [0.7 3 -0.4]
+p2 = polystab(p) = [0.7 0.067948 -0.0205197]
+Polynomial, p = [1.45728 -1.13848 1.12252 0.937431 0.308753 1.30289 -0.505866]
+p2 = polystab(p) = [1.45728 -0.276253 0.528167 0.324484 -0.251122 0.657748 -0.207674]
+Polynomial, p = [1 -2 1.13 -0.154]
+p2 = polystab(p) = [1 -1.80909 0.958182 -0.127273]
+Stabilisation of complex filters
+Polynomial, p = [0.7+0i 3+0i -0.4+0i]
+p2 = polystab(p) = [0.7+0i 0.067948+0i -0.0205197+0i]
+Polynomial, p = [0.135554+0.158438i 0.0951595+0.197717i -0.176625+0.463869i 0.0464325-0.400883i 0.638879-0.812762i -0.375443-0.294296i -1.95974-1.08227i]
+p2 = polystab(p) = [0.135554+0.158438i 0.0339017+0.0287193i 0.0621383-0.0735533i 0.0356976-0.0117686i -0.038997+0.0248288i -0.0198246-0.00496558i -0.0170005-0.00938857i]
+Polynomial, p = [1+0i -2+0i 1.13+0i -0.154+0i]
+p2 = polystab(p) = [1+0i -1.80909-2.85476e-17i 0.958182+1.87287e-17i -0.127273+2.06226e-17i]
+a = [-1.05337+0.397129i 0.370509-0.639193i 0.507353+0.0595547i -0.0758261-0.157134i]
+b = [-0.483975+0.158727i -0.507805-0.400208i -1.01415+0.298065i -0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i]
+freqz(b,a,32) = [2.57383-2.37111i 2.21984-1.94851i 1.98299-1.84381i 1.74102-1.87534i 1.45762-1.95079i 1.12815-2.01398i 0.764072-2.02821i 0.386386-1.97094i 0.0212383-1.83222i -0.304088-1.61389i -0.565088-1.32848i -0.743507-0.9969i -0.829816-0.645276i -0.824199-0.301004i -0.73588+0.0110176i -0.58104+0.271365i -0.3799+0.467769i -0.153676+0.595373i 0.0779756+0.65582i 0.29867+0.655611i 0.49608+0.604228i 0.661923+0.512415i 0.791391+0.390855i 0.882296+0.249349i 0.934138+0.0964726i 0.947282-0.0603583i 0.922319-0.214503i 0.859707-0.359478i 0.759729-0.488176i 0.622836-0.591951i 0.450534-0.659624i 0.247081-0.676483i]
