@@ -1,0 +1,21 @@
+===================================
+    Test of polynomial routines
+===================================
+Real polynomials
+Roots, r = [1.45728 -1.13848 1.12252]
+Polynomial, p = [1 -1.44133 -1.30121 1.86236]
+r = roots(p) = [-1.13848+0i 1.45728+0i 1.12252+0i]
+Roots, r = [0.308753 1.30289 -0.505866 0.746416 -0.697447 1.02252 0.432204]
+Polynomial, p = [1 -2.60947 1.24233 1.56839 -1.34648 -0.0509401 0.244723 -0.0468173]
+r = roots(p) = [1.30289+0i -0.697447+0i -0.505866+0i 1.02252+0i 0.746416+0i 0.432204+0i 0.308753+0i]
+x = [0.917611 -0.403519 0.457302 1.28131 0.00583875 -0.0358695 -0.453088 -1.72459 1.19487]
+polyval(p, x) = [0.00470166 -0.0501087 -0.00057298 -0.00872181 -0.0453905 -0.0555963 -0.0270347 -112.821 -0.018158]
+Complex polynomials
+Roots, r = [0.507353+0.0595547i -0.0758261-0.157134i -0.483975+0.158727i]
+Polynomial, p = [1+0i 0.0524476-0.0611484i -0.222472+0.0314828i -0.0274606-0.0361481i]
+r = roots(p) = [0.507353+0.0595547i -0.483975+0.158727i -0.0758261-0.157134i]
+Roots, r = [-0.507805-0.400208i -1.01415+0.298065i -0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i]
+Polynomial, p = [1+0i 1.61552+1.21379i -1.0204+2.12211i -3.42842+0.0866481i -1.51768-1.74498i 0.515586-0.881974i 0.334074+0.0761346i -0.0293487+0.0467754i]
+r = roots(p) = [1.15323-0.319662i -0.866433-0.637334i -1.01415+0.298065i -0.781279+0.220548i -0.507805-0.400208i 0.181756-0.235722i 0.219153-0.139473i]
+x = [0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i 0.11692-0.622633i -0.138344+1.18493i 0.4894-0.0572022i -1.33716-0.619299i -0.214406+0.297753i 0.555327+0.957725i]
+polyval(p, x) = [-5.98803+6.94894i -0.0394416-0.0210699i -1.75911-0.263426i -0.0685529-0.235331i -12.8756-12.9734i -0.166556-0.150007i 2.53135-0.0939431i -0.240585-0.029989i 11.7795+15.3917i]
